update package dependancies

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "dependencies": {
     "gulp": "^3.9.0",
-    "koa": "^1.1.0"
+    "koa": "^1.1.0",
+    "koa-router": "^5.2.3"
   },
   "devDependencies": {},
-
   "engines": {
     "node": "4.x"
   },
@@ -17,7 +17,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "echo Installation complete!"
   },
-
   "author": "Jason Kelly",
   "license": "ISC",
   "description": ""
