--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "co": "^4.6.0",
+    "co-body": "^4.0.0",
     "co-fs": "^1.2.0",
+    "co-monk": "^1.0.0",
     "gulp": "^3.9.0",
     "koa": "^1.1.0",
-    "koa-router": "^5.2.3"
+    "koa-compress": "^1.0.8",
+    "koa-logger": "^1.3.0",
+    "koa-route": "^2.4.2",
+    "mongodb": "^1.4.39",
+    "monk": "^1.0.1"
   },
   "devDependencies": {},
   "engines": {
