--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "koa": "^1.1.0",
     "koa-compress": "^1.0.8",
     "koa-logger": "^1.3.0",
-    "koa-route": "^2.4.2",
+    "koa-router": "^5.2.3",
     "mongodb": "^1.4.39",
     "monk": "^1.0.1"
   },
